# BreachPilot

./: .env.example  .gitignore  AGENTS.md  ARSENAL_SUBMISSION_SUMMARY.md  CHANGELOG.md  CHANGELOG_FIX.md  CLEANUP.md  CLEANUP_INSTRUCTIONS.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Dockerfile  ENHANCED_REPORTING_README.md  EXPLOIT_EXECUTION_GUIDE.md  EXPLOIT_FAILURE_ANALYSIS_GUIDE.md  FINAL_CLEANUP_REPORT.md  FINAL_FIX_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_REVIEW_SUMMARY.md  FIXED_IMPLEMENTATION.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  MANUAL_CLEANUP_INSTRUCTIONS.md  NETWORK_TROUBLESHOOTING.md  NMAP_FIX_CHANGELOG.md  PDF_DOWNLOAD_COMPLETE_FIX.md  PDF_DOWNLOAD_FIX.md  PDF_DOWNLOAD_QUICK_FIX.md  POC_ENHANCEMENT_REPORT.md  QUICKSTART.md  QUICK_START.md  QUICK_START_TESTING.md  README.md  README_ARSENAL.md  README_PORT_ISSUE.md  SETUP_INSTRUCTIONS.md  (+38 more)
backend/: agents.yaml  config.py  main.py  models.py  orchestrator.py  scenario_orchestrator.py  tasks.yaml
breachpilot/: __init__.py  cli.py
core/: demo_scenarios.py  job_utils.py  mock_imports.py
data/: 192.168.1.100_analysis.json  192.168.1.100_exploits.json  192.168.1.100_nmap.json  192.168.253.30_analysis.json  192.168.253.30_analyst.json  192.168.253.30_exploit_CVE-2020-1472_2.json  192.168.253.30_exploit_CVE_2020_1472.json  192.168.253.30_exploits.json  192.168.253.30_nmap.json  192.168.253.30_nmap.xml  192.168.253.30_osint.json  README.md  session_10e00fb4-c151-42bb-a373-1c53e21d10d7.json  (+9 more)
docs/: API_REFERENCE.md  (+5 more)
(+113 files in other folders)
