[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "breachpilot"
version = "0.1.0"
description = "AI-powered penetration testing tool using CrewAI with Human-in-the-loop design"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "crewai>=0.28.0",
    "python-nmap>=0.7.1",
    "requests>=2.31.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "anthropic>=0.20.0",
]

[project.scripts]
breachpilot = "breachpilot.cli:main"

[project.urls]
"Homepage" = "https://github.com/d01ki/BreachPilot"
"Bug Reports" = "https://github.com/d01ki/BreachPilot/issues"
"Source" = "https://github.com/d01ki/BreachPilot"